--- a/css/style.css
+++ b/css/style.css
@@ -35,16 +35,20 @@ section.merc {
 
 section.audi {
   background: url("../images/audi-back.jpg");
-  /* background-position:; */
+  background-position: center;
 }
 section.main h1 {
+  padding: 0 1rem;
   font-size: 5.5rem;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 section.main p {
+  padding: 0 1rem;
   font-size: 2rem;
   font-style: italic;
-  color: gainsboro;
+  color: white;
+  background: rgba(0, 0, 0, 0.2);
 }
 
 section.brands {
